force-app/main/default/objects/Contract/fields/Modalidad_de_instalaci_n__c.field-meta.xml
<CustomField>
    <fullName>Modalidad_de_instalaci_n__c</fullName>
    <label>Modalidad de instalación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modular</fullName>
                <default>true</default>
                <label>Modular</label>
            </value>
            <value>
                <fullName>Hágalo usted mismo</fullName>
            </value>
            <value>
                <fullName>Llave en mano</fullName>
            </value>
            <value>
                <fullName>Depósito propio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>