force-app/main/default/objects/Contract/fields/Motivo_de_renovacion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_renovacion__c</fullName>
    <label>Motivo de renovación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caducado</fullName>
            </value>
            <value>
                <fullName>Cambio titular</fullName>
            </value>
            <value>
                <fullName>Cambio tarifa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>