force-app/main/default/objects/Contract/fields/N_Cliente_anterior__c.field-meta.xml
<CustomField>
    <fullName>N_Cliente_anterior__c</fullName>
    <inlineHelpText>Rellenar solo en caso de cambio de titular</inlineHelpText>
    <label>Nº Cliente anterior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>