force-app/main/default/objects/Contract/fields/N_cliente_existente__c.field-meta.xml
<CustomField>
    <fullName>N_cliente_existente__c</fullName>
    <label>Nº cliente existente</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>