force-app/main/default/objects/Contract/fields/N_Cliente_Navision__c.field-meta.xml
<CustomField>
    <fullName>N_Cliente_Navision__c</fullName>
    <formula>Account.N_mero_cliente_anterior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N. Cliente Navision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>