force-app/main/default/objects/Contract/fields/N_fax__c.field-meta.xml
<CustomField>
    <fullName>N_fax__c</fullName>
    <label>Nº fax</label>
    <type>Phone</type>
</CustomField>