force-app/main/default/objects/Contract/fields/N_mero_de_vaporizadores__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_vaporizadores__c</fullName>
    <label>Número de vaporizadores</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>