force-app/main/default/objects/Contract/fields/N_Pedido_creado__c.field-meta.xml
<CustomField>
    <fullName>N_Pedido_creado__c</fullName>
    <label>Nº Pedido creado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>