force-app/main/default/objects/Contract/fields/N_Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>N_Prescriptor__c</fullName>
    <formula>&quot;R&quot;&amp; Prescriptor__r.C_digo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº Prescriptor</label>
    <type>Text</type>
</CustomField>