force-app/main/default/objects/Contract/fields/N_telefono__c.field-meta.xml
<CustomField>
    <fullName>N_telefono__c</fullName>
    <label>Teléfono principal</label>
    <type>Phone</type>
</CustomField>