force-app/main/default/objects/Contract/fields/N_telefono_movil__c.field-meta.xml
<CustomField>
    <fullName>N_telefono_movil__c</fullName>
    <label>Teléfono secundario</label>
    <type>Phone</type>
</CustomField>