force-app/main/default/objects/Contract/fields/Nombre_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_cliente__c</fullName>
    <label>Nombre cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>