force-app/main/default/objects/Contract/fields/Numero_de_contrato_app__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_contrato_app__c</fullName>
    <label>Número de contrato app</label>
    <length>80</length>
    <type>Text</type>
</CustomField>