force-app/main/default/objects/Contract/fields/Obra_civil_tuberia__c.field-meta.xml
<CustomField>
    <fullName>Obra_civil_tuberia__c</fullName>
    <label>Obra civil tubería</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>PRIMAGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>