force-app/main/default/objects/Contract/fields/Obra_civil_vallado_importe__c.field-meta.xml
<CustomField>
    <fullName>Obra_civil_vallado_importe__c</fullName>
    <label>Obra civil - vallado importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>