force-app/main/default/objects/Contract/fields/Observaciones_equipos__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_equipos__c</fullName>
    <label>Observaciones equipos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>