force-app/main/default/objects/Contract/fields/Observaciones_generales__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_generales__c</fullName>
    <description>Observaciones del contrato</description>
    <label>Observaciones generales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>