force-app/main/default/objects/Contract/fields/OldCustomerNavCode__c.field-meta.xml
<CustomField>
    <fullName>OldCustomerNavCode__c</fullName>
    <label>OldCustomerNavCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>