force-app/main/default/objects/Contract/fields/OldShiptoCode__c.field-meta.xml
<CustomField>
    <fullName>OldShiptoCode__c</fullName>
    <label>OldShiptoCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>