force-app/main/default/objects/Contract/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instalador</fullName>
            </value>
            <value>
                <fullName>Prescriptor</fullName>
            </value>
            <value>
                <fullName>Prospección directa</fullName>
            </value>
            <value>
                <fullName>Llamada entrante</fullName>
            </value>
            <value>
                <fullName>Online Primagas</fullName>
            </value>
            <value>
                <fullName>Prescriptor Online</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Licitaciones Públicas</fullName>
            </value>
            <value>
                <fullName>GALP</fullName>
            </value>
            <value>
                <fullName>Gasindur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>