force-app/main/default/objects/Contract/fields/Origen_tipo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Origen_tipo_de_cliente__c</fullName>
    <label>Origen tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nueva Creación</fullName>
            </value>
            <value>
                <fullName>Cambio Botellas</fullName>
            </value>
            <value>
                <fullName>Cambio Depósito REPSOL</fullName>
            </value>
            <value>
                <fullName>Cambio Depósito CEPSA</fullName>
            </value>
            <value>
                <fullName>Cambio Depósito BP</fullName>
            </value>
            <value>
                <fullName>Cambio Depósito VITOGÁS</fullName>
            </value>
            <value>
                <fullName>Cambio Depósito OTRO</fullName>
            </value>
            <value>
                <fullName>Cambio Energía Electricidad</fullName>
            </value>
            <value>
                <fullName>Cambio Energía Fuel</fullName>
            </value>
            <value>
                <fullName>Cambio Energía Gasóleo</fullName>
            </value>
            <value>
                <fullName>Cambio Energía Otro</fullName>
            </value>
            <value>
                <fullName>Galp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>