force-app/main/default/objects/Contract/fields/Otros_cliente__c.field-meta.xml
<CustomField>
    <fullName>Otros_cliente__c</fullName>
    <label>Otros (cliente)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>