force-app/main/default/objects/Contract/fields/Otros_exterior__c.field-meta.xml
<CustomField>
    <fullName>Otros_exterior__c</fullName>
    <label>Otros exterior importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>