force-app/main/default/objects/Contract/fields/Otros_interior_importe__c.field-meta.xml
<CustomField>
    <fullName>Otros_interior_importe__c</fullName>
    <label>Otros interior importe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>