force-app/main/default/objects/Contract/fields/Otros_Primagas__c.field-meta.xml
<CustomField>
    <fullName>Otros_Primagas__c</fullName>
    <label>Otros (Primagas)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>