force-app/main/default/objects/Contract/fields/Pago_fraccionado__c.field-meta.xml
<CustomField>
    <fullName>Pago_fraccionado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago fraccionado</label>
    <type>Checkbox</type>
</CustomField>