force-app/main/default/objects/Contract/fields/Pago_prima__c.field-meta.xml
<CustomField>
    <fullName>Pago_prima__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago prima</label>
    <type>Checkbox</type>
</CustomField>