force-app/main/default/objects/Contract/fields/Pedido_Instalaci_n_creado__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Instalaci_n_creado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcar cuando esté creado el pedido de servicio (PS) relacionado con la instalación.</inlineHelpText>
    <label>Pedido Instalación creado</label>
    <type>Checkbox</type>
</CustomField>