force-app/main/default/objects/Contract/fields/Perfil_base__c.field-meta.xml
<CustomField>
    <fullName>Perfil_base__c</fullName>
    <label>Perfil base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>