force-app/main/default/objects/Contract/fields/Perfil_de_consumo__c.field-meta.xml
<CustomField>
    <fullName>Perfil_de_consumo__c</fullName>
    <label>Perfil de consumo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lineal</fullName>
            </value>
            <value>
                <fullName>Calefacción</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>