force-app/main/default/objects/Contract/fields/Plazo_de_pagos__c.field-meta.xml
<CustomField>
    <fullName>Plazo_de_pagos__c</fullName>
    <label>Plazo de pagos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>