force-app/main/default/objects/Contract/fields/Prescriptor_no_en_BD__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor_no_en_BD__c</fullName>
    <label>Prescriptor no en BD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>