force-app/main/default/objects/Contract/fields/Presentacion_en_ayuntamiento__c.field-meta.xml
<CustomField>
    <fullName>Presentacion_en_ayuntamiento__c</fullName>
    <label>Presentación en ayuntamiento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>PRIMAGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>