force-app/main/default/objects/Contract/fields/Primaconta__c.field-meta.xml
<CustomField>
    <fullName>Primaconta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primaconta</label>
    <type>Checkbox</type>
</CustomField>