force-app/main/default/objects/Contract/fields/Primaservicios_gratuitos__c.field-meta.xml
<CustomField>
    <fullName>Primaservicios_gratuitos__c</fullName>
    <formula>if(ISBLANK( Importe_servicios__c ),true,false)</formula>
    <label>Primaservicios gratuitos</label>
    <type>Checkbox</type>
</CustomField>