force-app/main/default/objects/Contract/fields/Primaservicios_mes1__c.field-meta.xml
<CustomField>
    <fullName>Primaservicios_mes1__c</fullName>
    <formula>(Importe_servicios__c-(Importe_servicios__c* dto_a_o_1__c))/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>No pasa a NAV</inlineHelpText>
    <label>Primaservicios(€/mes año 1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>