force-app/main/default/objects/Contract/fields/Primaservicios_mes2__c.field-meta.xml
<CustomField>
    <fullName>Primaservicios_mes2__c</fullName>
    <formula>(Importe_servicios__c-(Importe_servicios__c*  dto_a_o_2__c))/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primaservicios(€/mes año 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>