force-app/main/default/objects/Contract/fields/Producto_contratado__c.field-meta.xml
<CustomField>
    <fullName>Producto_contratado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto contratado</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>