force-app/main/default/objects/Contract/fields/Promotor__c.field-meta.xml
<CustomField>
    <fullName>Promotor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos_Promotor</relationshipName>
    <type>Lookup</type>
</CustomField>