force-app/main/default/objects/Contract/fields/Proyecto_exterior_memoria__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_exterior_memoria__c</fullName>
    <label>Proyecto exterior / memoria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>PRIMAGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>