force-app/main/default/objects/Contract/fields/Proyecto_interior_importe__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_interior_importe__c</fullName>
    <label>Proyecto interior importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>