force-app/main/default/objects/Contract/fields/Prueba_instalacion_importe__c.field-meta.xml
<CustomField>
    <fullName>Prueba_instalacion_importe__c</fullName>
    <label>Prueba instalacion importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>