force-app/main/default/objects/Contract/fields/Reminder_terms_code__c.field-meta.xml
<CustomField>
    <fullName>Reminder_terms_code__c</fullName>
    <label>Reminder terms code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>NUEVO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>