force-app/main/default/objects/Contract/fields/Rentabilidad_prevista__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidad_prevista__c</fullName>
    <label>Rentabilidad prevista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>