force-app/main/default/objects/Contract/fields/Responsabilidad_cliente__c.field-meta.xml
<CustomField>
    <fullName>Responsabilidad_cliente__c</fullName>
    <label>Responsabilidad cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Prueba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>