force-app/main/default/objects/Contract/fields/Segmento_1__c.field-meta.xml
<CustomField>
    <fullName>Segmento_1__c</fullName>
    <description>Se corresponde con la dimensión Actividad 3 de Navision</description>
    <label>Segmento 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000-DU</fullName>
            </value>
            <value>
                <fullName>1100-CV</fullName>
            </value>
            <value>
                <fullName>1200-AGRI</fullName>
            </value>
            <value>
                <fullName>1300-IND</fullName>
            </value>
            <value>
                <fullName>1400-HRO</fullName>
            </value>
            <value>
                <fullName>1500-COL</fullName>
            </value>
            <value>
                <fullName>1600-CON</fullName>
            </value>
            <value>
                <fullName>1700-CAP</fullName>
            </value>
            <value>
                <fullName>1800-PC</fullName>
            </value>
            <value>
                <fullName>1850-PM</fullName>
            </value>
            <value>
                <fullName>1900-FLT</fullName>
            </value>
            <value>
                <fullName>2000-OP</fullName>
            </value>
            <value>
                <fullName>2100-DIGR</fullName>
            </value>
            <value>
                <fullName>2200-DIPC</fullName>
            </value>
            <value>
                <fullName>2300-UE</fullName>
            </value>
            <value>
                <fullName>2400-EX</fullName>
            </value>
            <value>
                <fullName>3000-NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>