force-app/main/default/objects/Contract/fields/Segmento_2__c.field-meta.xml
<CustomField>
    <fullName>Segmento_2__c</fullName>
    <description>Se corresponde con la dimensión Actividad 4 de Navision</description>
    <label>Segmento 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>