force-app/main/default/objects/Contract/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <description>Agafa l&apos;activitat1 de la dirección de entrega. Es fa servir per informes</description>
    <formula>TEXT(Direccion_de_entrega__r.Actividad_1__c)</formula>
    <label>Segmento</label>
    <type>Text</type>
</CustomField>