force-app/main/default/objects/Contract/fields/Segunda_residencia_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Segunda_residencia_DocuSign__c</fullName>
    <description>Campo creado para el mapeo de contrato de tipo póliza en DocuSign</description>
    <formula>IF(Consumo_previsto_tons__c =350, TRUE,FALSE)</formula>
    <label>Segunda residencia (DocuSign)</label>
    <type>Checkbox</type>
</CustomField>