force-app/main/default/objects/Contract/fields/Servicios__c.field-meta.xml
<CustomField>
    <fullName>Servicios__c</fullName>
    <label>Servicios</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALQUILER</fullName>
            </value>
            <value>
                <fullName>MANTENIMIENTO</fullName>
            </value>
            <value>
                <fullName>MTO TELEMEDIDA</fullName>
            </value>
            <value>
                <fullName>NIVELDIST</fullName>
            </value>
            <value>
                <fullName>NIVELDISTINST</fullName>
            </value>
            <value>
                <fullName>NIVELDISTMANT</fullName>
            </value>
            <value>
                <fullName>PRIMACONFORT</fullName>
            </value>
            <value>
                <fullName>PRIMAFACIL</fullName>
            </value>
            <value>
                <fullName>PS CONFORT DOM</fullName>
            </value>
            <value>
                <fullName>PS CONFORT PROF</fullName>
            </value>
            <value>
                <fullName>PS OPTIMO</fullName>
            </value>
            <value>
                <fullName>PZ REV INT</fullName>
            </value>
            <value>
                <fullName>TELEMEDIDA - EQUIPO</fullName>
            </value>
            <value>
                <fullName>TELEMEDIDA - SERVTOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>