force-app/main/default/objects/Contract/fields/Subcontratista__c.field-meta.xml
<CustomField>
    <fullName>Subcontratista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo se sustituye por el campo &quot;Instalador&quot;, que apunta a cuenta en vez de al objeto proveedor.</description>
    <label>Subcontratista</label>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipLabel>Contratos (Subcontratista)</relationshipLabel>
    <relationshipName>Contratos1</relationshipName>
    <type>Lookup</type>
</CustomField>