force-app/main/default/objects/Contract/fields/Subcontratista_no_BD__c.field-meta.xml
<CustomField>
    <fullName>Subcontratista_no_BD__c</fullName>
    <inlineHelpText>Si no encuentras al subcontratista ponlo en este campo</inlineHelpText>
    <label>Subcontratista no BD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>