force-app/main/default/objects/Contract/fields/SWI__c.field-meta.xml
<CustomField>
    <fullName>SWI__c</fullName>
    <label>SWIFT</label>
    <length>11</length>
    <type>Text</type>
</CustomField>