force-app/main/default/objects/Contract/fields/Tanque_propio__c.field-meta.xml
<CustomField>
    <fullName>Tanque_propio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Creado para la funcionalidad de cambio de titular.</description>
    <label>Tanque propio</label>
    <type>Checkbox</type>
</CustomField>