force-app/main/default/objects/Contract/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarifa</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>