force-app/main/default/objects/Contract/fields/Telemedida__c.field-meta.xml
<CustomField>
    <fullName>Telemedida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo crea el service item telemedida en NAV</description>
    <label>Telemedida</label>
    <type>Checkbox</type>
</CustomField>