force-app/main/default/objects/Contract/fields/Territorio__c.field-meta.xml
<CustomField>
    <fullName>Territorio__c</fullName>
    <label>Territorio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>ARA</fullName>
            </value>
            <value>
                <fullName>AST</fullName>
            </value>
            <value>
                <fullName>CANT</fullName>
            </value>
            <value>
                <fullName>CASLEO</fullName>
            </value>
            <value>
                <fullName>CASMAN</fullName>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>EUSK</fullName>
            </value>
            <value>
                <fullName>EXT</fullName>
            </value>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>LARIO</fullName>
            </value>
            <value>
                <fullName>MAD</fullName>
            </value>
            <value>
                <fullName>MUR</fullName>
            </value>
            <value>
                <fullName>NAV</fullName>
            </value>
            <value>
                <fullName>VAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>