force-app/main/default/objects/Contract/fields/Tipo_camion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_camion__c</fullName>
    <label>Tipo camion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>