force-app/main/default/objects/Contract/fields/Tipo_de_descuento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_descuento__c</fullName>
    <label>Tipo de descuento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fijo</fullName>
            </value>
            <value>
                <fullName>Por volumen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>