force-app/main/default/objects/Contract/fields/Tipo_de_tanque__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_tanque__c</fullName>
    <label>Tipo de tanque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aereo</fullName>
                <default>true</default>
                <label>Aereo</label>
            </value>
            <value>
                <fullName>Enterrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>