force-app/main/default/objects/Contract/fields/Tipo_GNL__c.field-meta.xml
<CustomField>
    <fullName>Tipo_GNL__c</fullName>
    <label>Tipo GNL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SPOT</fullName>
            </value>
            <value>
                <fullName>PLATINO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>