force-app/main/default/objects/Contract/fields/Tipo_residencia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_residencia__c</fullName>
    <label>Tipo residencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Primera</fullName>
            </value>
            <value>
                <fullName>Segunda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>