force-app/main/default/objects/Contract/fields/Toma_agua_15_m__c.field-meta.xml
<CustomField>
    <fullName>Toma_agua_15_m__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Toma agua &lt; 15 m.</label>
    <type>Checkbox</type>
</CustomField>