force-app/main/default/objects/Contract/fields/TP_tipo_instalacion__c.field-meta.xml
<CustomField>
    <fullName>TP_tipo_instalacion__c</fullName>
    <label>TP tipo instalacion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>